grid done, bug with top left card column jump

--- a/loc-fin-2020/src/App.scss
+++ b/loc-fin-2020/src/App.scss
@@ -7,5 +7,6 @@
 
 .pageMain {
   width: 100vw;
+  height: 100vh;
 
 }
