--- a/loc-fin-2020/src/components/pages/List.scss
+++ b/loc-fin-2020/src/components/pages/List.scss
@@ -1,108 +1,47 @@
-.app-card-list {
+.listDiv {
   display: flex;
-  min-width:100%;
-  margin: 0;
-  white-space:normal;
+  justify-content: center;
+  align-content: center;
+  // flex-direction: column;
+  grid-auto-flow: column;
+}
 
+
+.c-card {
+  overflow: auto;
+  // position: relative;
+  // overflow: hidden;
+  // -webkit-row-break-inside: avoid;
+// page-break-inside: avoid;
+  break-inside: avoid;
+
+  margin: 0  0 5px 0!important;
+  max-width: 342px !important;
+  min-width: 342px !important;
+
+
+  &__container {
+    // columns: 3;
+    // justify-content: center;
+    // align-content: center;
+    // margin: 5px auto;
+    // min-height: 10000px !important;
+    // grid-auto-flow: column;
+
+    // overflow-y: visible;
+
+
+    @media(min-width:768px) {
+      columns: 2;
+        // width: 80%;
+        // white-space:nowrap;
+        margin-top: 5px;
+      }
+      @media (min-width: 1060px) {
+      columns: 3;
+    }
+  }
   &::-webkit-scrollbar {
     display: none;
-  }
-
-  @media(min-width:768px) {
-      width:80%;
-      white-space:nowrap;
-      margin-top: 0;
-  }
-
-  .cardColumninRow {
-    margin: 1px;
-    padding: 0;
-    max-width: 344px;
-    min-width: 344px;
-  }
-
-  .cardRow {
-    min-width: 100vw;
-  }
-
-  .card {
-    margin: 7px;
-    max-width: 344px;
-    min-width: 344px;
-    display: inline-block;
-
-    .card-body {
-        white-space: normal;
-        height: 272px;
-        padding: 0;
-    }
-
-    .card-image {
-      max-height: 275px;
-      min-height: 274px;
-      max-width: 342px;
-      min-width: 342px;
-      z-index: -1 !important;
-    }
-
-    .distance {
-      position: absolute;
-      top: 242px;
-      left: 10px;
-      color: #ffc107;
-      font-size: larger;
-      font-weight: bold;
-    }
-
-    .card-title {
-      margin-bottom: 0;
-      text-align: center;
-      padding-top: 5px;
-      background-color: #172a28;
-      color: #ffc107;
-
-    }
-
-    .description {
-      margin: 9px;
-      overflow-wrap: break-word;
-      font-size: 14px;
-    }
-
-    .location-details {
-      display: flex;
-      text-align: center;
-      flex-direction: column;
-      height: 22px;
-      text-transform:capitalize;
-      font-size: 11.5px;
-      color: #ffc107;
-      background-color: #172a28;
-    }
-
-    .card-footer {
-      background-color: #172a28;
-      color: white;
-      height: 55px;
-      display: flex;
-      flex-direction: row;
-      padding: 6px, 9px;
-      font-size: 11.5px;
-
-      .contactGroup {
-        display: flex;
-        flex-direction: column;
-        height: 44px;
-      }
-
-      .buttonGroup {
-        display: inline;
-        margin-left: auto;
-      }
-
-      .button .btn {
-        height: 20px !important;
-      }
-    }
   }
 }
